# mairu

./: .env.example  .gitignore  .gitmodules  .mairu.toml  AGENT_INTEGRATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  autoresearch.jsonl  bench_agent.sh  bootstrap.sh  docker-compose.yml  fix_agent.sh  package-lock.json  package.json  patch_chunker.sh  patch_outline.sh  patch_tests.sh  test.js  test_slice.go  test_tui_fix.sh  tsconfig.json  tsconfig.test.json  vitest.config.ts
.githooks/: pre-commit
browser-extension/: install.sh  test_whitespace
browser-extension/crates/wasm/: Cargo.toml
browser-extension/crates/wasm/src/: lib.rs
browser-extension/native-host/: Cargo.toml
browser-extension/native-host/src/: http.rs  main.rs  protocol.rs
browser-extension/native-host/tests/: integration.rs
cursor-extension/: .vscodeignore  README.md  package.json  tsconfig.json
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: PROJECT_STRUCTURE.md  README.md
eval/: dataset.example.json  dataset.json
llmeval/: README.md  go.mod  go.sum  mairu_vibe_mutation_eval.json  sample_dataset.json
mairu/: .gitignore  .golangci.yml  README.md  go.mod  go.sum  parse.go  wails.json
mairu-ext/: Cargo.toml
mobile/: .eslintrc.js  App.tsx  jest.e2e.config.js  package.json  tsconfig.json
pii-redact/: .gitignore  Makefile  README.md  autoresearch.jsonl  bench_runner.sh  go.mod
scripts/: check-fixtures.sh  install-hooks.sh
src/: ContextManager.ts  TursoVectorDB.ts  cli.ts  client.ts  config.ts  daemon.ts  (+19 more)
(+923 files in other folders)
