[package]
name = "browser-extension-wasm"
version = "0.1.0"
edition = "2021"
license = "BlueOak-1.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
browser-extension-core = { path = "../core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
